@@ -2,3 +2,4 @@
   Defaults :capitalize to true
   Add option hash argument to Rassphrase#generate
   Add boolean argument to Rassphrase#passphrase, that indicates capitalization
+  Rename Rassphrase#generate_code to Rassphrase#random_code
